--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Nicholas Block</title>
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script src="../js/index.js" type="text/javascript"></script>
 </head>
 <body>
 
