Update contact and work pages while also starting basic styling

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,17 @@
 		</nav>
 	</header>
 	<main>
-		<h2>Contact</h2>
+		<h2>Contact Information</h2>
+		<div id="phone">
+			<p><strong>Phone Number: </strong></p>
+			<p>(847) 650-7028</p>
+		</div>
+		<div id="email">
+			<p><strong>Email: </strong></p>
+			<p>nicholasblock78@gmail.com</p>
+		</div>
+
+
 	</main>
 	<footer>
 		
