--- a/html/work.html
+++ b/html/work.html
@@ -24,7 +24,36 @@
 	</header>
 	<main>
 		<h2>My Work</h2>
-		
+		<div>
+			<h3>Team Projects</h3>
+			<ul>
+				<li>
+					<p><strong>Food Hackathon for Healthier Kids</strong></p>
+					<p>Coming late October!</p>
+				</li>
+				<li>
+					<p><strong>Recip-E</strong></p>
+					<p>Dev Bootcamp's Final Project</p>
+				</li>
+				<li>
+					<p><strong>Pharoah</strong></p>
+					<p>The Creative Circus's Final Project</p>
+				</li>
+			</ul>
+		</div>
+		<div>
+			<h3>Personal Projects</h3>
+			<ul>
+				<li>
+					<p><strong>Eat for Us</strong></p>
+					<p>A sustainable food blog</p>
+				</li>
+				<li>
+					<p><strong>Paws On Foot</strong></p>
+					<p>A business I wanted to start back in college</p>
+				</li>
+			</ul>
+		</div>
 	</main>
 	<footer>
 		
