Update footer on all pages. Update some styling

--- a/html/contact.html
+++ b/html/contact.html
@@ -22,6 +22,7 @@
 			</ul>
 		</nav>
 	</header>
+
 	<main>
 		<h2>Contact Information</h2>
 		<div id="phone">
@@ -32,11 +33,16 @@
 			<p><strong>Email: </strong></p>
 			<p>nicholasblock78@gmail.com</p>
 		</div>
+		<div>
+			<p>You can find links to my LinkedIn and Github pages in the footer below.</p>
+		</div>
 
 
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
