--- a/html/index.html
+++ b/html/index.html
@@ -24,10 +24,12 @@
 	</header>
 	<main>
 		<h2>Homepage</h2>
-		
+		<p>Welcome to my site!</p>
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
