--- a/html/about.html
+++ b/html/about.html
@@ -23,11 +23,17 @@
 		</nav>
 	</header>
 	<main>
-		<h2>About</h2>
+		<h2>About Me</h2>
+		<img src="../images/me.png" alt="Picture of Me" height="200px" />
+		<h4><em>"Creative health nut turned curious developer eager to inspire and change the world one line of code at a time."</em></h4>
+		<h3>Who am I?</h3>
+		<h3>Why coding?</h3>
 		
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
