--- a/html/experiences.html
+++ b/html/experiences.html
@@ -24,10 +24,32 @@
 	</header>
 	<main>
 		<h2>Experiences</h2>
-		
+		<div>
+			<h3>Dev Bootcamp</h3>
+			<p>19-week intensive coding bootcamp for full stack web development.</p>
+			<p>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</p>
+		</div>
+		<div>
+			<h3>The Chopping Block</h3>
+			<p>Prepared appetizers for guests and served alcohol to patrons during classes and parties</p>
+			<p>Instructed patrons on cooking skills during parties while leading a recipe(s) station</p>
+			<p>Assissted leading cooking bootcamps for kids and adults alike</p>
+		</div>
+			<div>
+			<h3>The Creative Circus</h3>
+			<p>Eight week intensive creative advertising bootcamp in Atlanta, GA.</p>
+		</div>
+			<div>
+			<h3>Outdoor Adventure Camp</h3>
+			<p>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</p>
+			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
+			<p>Led many outdoor recreational activities, such as hiking and kayaking</p>
+		</div>
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
