--- a/html/skills.html
+++ b/html/skills.html
@@ -24,9 +24,21 @@
 	</header>
 	<main>
 		<h2>Skills</h2>
+		<ul>
+			<li>Ruby</li>
+			<li>Ruby on Rails</li>
+			<li>HTML5</li>
+			<li>CSS3</li>
+			<li>jQuery and AJAX</li>
+			<li>Agile Workflow</li>
+			<li>SQL</li>
+			<li>Active Record</li>
+		</ul>
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
