--- a/html/work.html
+++ b/html/work.html
@@ -56,7 +56,9 @@
 		</div>
 	</main>
 	<footer>
-		
+		<a href="https://www.linkedin.com/in/nicholasblock78
+"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
