Add currently studying section and link eat for us blog

--- a/html/skills.html
+++ b/html/skills.html
@@ -25,6 +25,13 @@
 	<main>
 		<h2>Skills</h2>
 		<ul>
+			<p>Currently studying</p>
+			<li>React</li>
+			<li>React Native</li>
+			<li>Google Maps API</li>
+		</ul>
+		<ul>
+			<p>Current Skills and Technologies</p>
 			<li>Ruby</li>
 			<li>Ruby on Rails</li>
 			<li>HTML5</li>
