--- a/html/work.html
+++ b/html/work.html
@@ -45,7 +45,7 @@
 			<h3>Personal Projects</h3>
 			<ul>
 				<li>
-					<p><strong>Eat for Us</strong></p>
+					<p><strong><a href="http://www.eatforus.com">Eat for Us</a></strong></p>
 					<p>A sustainable food blog</p>
 				</li>
 				<li>
