Update final project, recipe-E

--- a/html/work.html
+++ b/html/work.html
@@ -34,6 +34,12 @@
 				<li>
 					<p><strong>Recip-E</strong></p>
 					<p>Dev Bootcamp's Final Project</p>
+					<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
+					<ul>
+						<li>Goal to create a cross-platform mobile first app in a week with a team unfamiliar with Angular and Ionic</li>
+						<li>Operated in both front end and back end capacity. Coordinated categories for organizing ingredients</li>
+						<li>Created keynote presentation for the pitch at graduation</li>
+					</ul>
 				</li>
 				<li>
 					<p><strong>Pharoah</strong></p>
