--- a/html/experiences.html
+++ b/html/experiences.html
@@ -25,21 +25,25 @@
 	<main>
 		<h2>Experiences</h2>
 		<div>
+			<img src="../images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
 			<h3>Dev Bootcamp</h3>
 			<p>19-week intensive coding bootcamp for full stack web development.</p>
 			<p>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</p>
 		</div>
 		<div>
+			<img src="../images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
 			<h3>The Chopping Block</h3>
 			<p>Prepared appetizers for guests and served alcohol to patrons during classes and parties</p>
 			<p>Instructed patrons on cooking skills during parties while leading a recipe(s) station</p>
 			<p>Assissted leading cooking bootcamps for kids and adults alike</p>
 		</div>
 			<div>
+			<img src="../images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
 			<h3>The Creative Circus</h3>
 			<p>Eight week intensive creative advertising bootcamp in Atlanta, GA.</p>
 		</div>
 			<div>
+			<img src="../images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
 			<h3>Outdoor Adventure Camp</h3>
 			<p>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</p>
 			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
