--- a/html/work.html
+++ b/html/work.html
@@ -28,10 +28,12 @@
 			<h3>Team Projects</h3>
 			<ul>
 				<li>
+					<img src="../images/foodhackathon.png" alt="Food Hackathon Logo" height="100px"/>
 					<p><strong>Food Hackathon for Healthier Kids</strong></p>
 					<p>Coming late October!</p>
 				</li>
 				<li>
+					<img src="../images/recipe.png" alt="Recip-E Logo" height="100px"/>
 					<p><strong>Recip-E</strong></p>
 					<p>Dev Bootcamp's Final Project</p>
 					<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
