Add in Education

--- a/html/experiences.html
+++ b/html/experiences.html
@@ -49,6 +49,15 @@
 			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
 			<p>Led many outdoor recreational activities, such as hiking and kayaking</p>
 		</div>
+		<h2>Education</h2>
+		<div>
+			<h3>University of Iowa</h3>
+			<p>BA Health and Human Physiology, 2015</p>
+		</div>
+		<div>
+			<h3>Illinois Wesleyan University</h3>
+			<p>Attended freshman year</p>
+		</div>
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
