Update education pictures and some styling. Add span tags to header

--- a/html/experiences.html
+++ b/html/experiences.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<h1>Nicholas Block</h1>
+		<h1><span>Nicholas</span> Block</h1>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -51,10 +51,12 @@
 		</div>
 		<h2>Education</h2>
 		<div>
+			<img src="../images/iowa.gif" alt="Iowa Logo" height="40px" />
 			<h3>University of Iowa</h3>
 			<p>BA Health and Human Physiology, 2015</p>
 		</div>
 		<div>
+			<img src="../images/iwu-logo.png" alt="IWU Logo" height="40px" />
 			<h3>Illinois Wesleyan University</h3>
 			<p>Attended freshman year</p>
 		</div>
