--- a/html/skills.html
+++ b/html/skills.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<h1>Nicholas Block</h1>
+		<h1><span>Nicholas</span> Block</h1>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
