Reorder HTML file structure and change relative links

--- a/experiences.html
+++ b/experiences.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Nicholas Block</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="../js/index.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -25,25 +25,25 @@
 	<main>
 		<h2>Experiences</h2>
 		<div>
-			<img src="../images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
+			<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
 			<h3>Dev Bootcamp</h3>
 			<p>19-week intensive coding bootcamp for full stack web development.</p>
 			<p>Ruby. Ruby on Rails. Javascript. SQL. Active Record. Sinatra. jQuery. AJAX.</p>
 		</div>
 		<div>
-			<img src="../images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
+			<img src="images/choppingblock.jpg" alt="Chopping Block Logo" height="75px" />
 			<h3>The Chopping Block</h3>
 			<p>Prepared appetizers for guests and served alcohol to patrons during classes and parties</p>
 			<p>Instructed patrons on cooking skills during parties while leading a recipe(s) station</p>
 			<p>Assissted leading cooking bootcamps for kids and adults alike</p>
 		</div>
 			<div>
-			<img src="../images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
+			<img src="images/creativecircus.png" alt="Creative Circus Logo" height="100px" />
 			<h3>The Creative Circus</h3>
 			<p>Eight week intensive creative advertising bootcamp in Atlanta, GA.</p>
 		</div>
 			<div>
-			<img src="../images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
+			<img src="images/pdhp-logo.png" alt="PDHP Logo" height="75px" />
 			<h3>Outdoor Adventure Camp</h3>
 			<p>Assisted in leading a summer overnight adventure camp with 13 middle school-aged kids</p>
 			<p>Drove 15-passenger van (“Mini Bus”) to various camping sites in Midwest each week</p>
@@ -51,20 +51,20 @@
 		</div>
 		<h2>Education</h2>
 		<div>
-			<img src="../images/iowa.gif" alt="Iowa Logo" height="40px" />
+			<img src="images/iowa.gif" alt="Iowa Logo" height="40px" />
 			<h3>University of Iowa</h3>
 			<p>BA Health and Human Physiology, 2015</p>
 		</div>
 		<div>
-			<img src="../images/iwu-logo.png" alt="IWU Logo" height="40px" />
+			<img src="images/iwu-logo.png" alt="IWU Logo" height="40px" />
 			<h3>Illinois Wesleyan University</h3>
 			<p>Attended freshman year</p>
 		</div>
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
-"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
