--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Nicholas Block</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="../js/index.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 	</header>
 	<main>
 		<h2>About Me</h2>
-		<img src="../images/me.png" alt="Picture of Me" height="200px" />
+		<img src="images/me.png" alt="Picture of Me" height="200px" />
 		<h4><em>"Creative health nut turned curious developer eager to inspire and change the world one line of code at a time."</em></h4>
 		<h3>Who am I?</h3>
 		<h3>Why coding?</h3>
@@ -32,8 +32,8 @@
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
-"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
