--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Nicholas Block</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="../js/index.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,8 +28,8 @@
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
-"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
