--- a/skills.html
+++ b/skills.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Nicholas Block</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="../js/index.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,27 +22,30 @@
 			</ul>
 		</nav>
 	</header>
-
 	<main>
-		<h2>Contact Information</h2>
-		<div id="phone">
-			<p><strong>Phone Number: </strong></p>
-			<p>(847) 650-7028</p>
-		</div>
-		<div id="email">
-			<p><strong>Email: </strong></p>
-			<p>nicholasblock78@gmail.com</p>
-		</div>
-		<div>
-			<p>You can find links to my LinkedIn and Github pages in the footer below.</p>
-		</div>
-
-
+		<h2>Skills</h2>
+		<ul>
+			<p>Currently studying</p>
+			<li>React</li>
+			<li>React Native</li>
+			<li>Google Maps API</li>
+		</ul>
+		<ul>
+			<p>Current Skills and Technologies</p>
+			<li>Ruby</li>
+			<li>Ruby on Rails</li>
+			<li>HTML5</li>
+			<li>CSS3</li>
+			<li>jQuery and AJAX</li>
+			<li>Agile Workflow</li>
+			<li>SQL</li>
+			<li>Active Record</li>
+		</ul>
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
-"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
