--- a/work.html
+++ b/work.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Nicholas Block</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="../js/index.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,12 +28,12 @@
 			<h3>Team Projects</h3>
 			<ul>
 				<li>
-					<img src="../images/foodhackathon.png" alt="Food Hackathon Logo" height="100px"/>
+					<img src="images/foodhackathon.png" alt="Food Hackathon Logo" height="100px"/>
 					<p><strong>Food Hackathon for Healthier Kids</strong></p>
 					<p>Coming late October!</p>
 				</li>
 				<li>
-					<img src="../images/recipe.png" alt="Recip-E Logo" height="100px"/>
+					<img src="images/recipe.png" alt="Recip-E Logo" height="100px"/>
 					<p><strong>Recip-E</strong></p>
 					<p>Dev Bootcamp's Final Project</p>
 					<p>Check it out on the Google Play store <a href="https://play.google.com/store/apps/details?id=com.ionicframework.recipefrontend129174&hl=en">here</a>!</p>
@@ -65,8 +65,8 @@
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
-"><img src="../images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
-		<a href="https://github.com/nicholasblock78"><img src="../images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
+"><img src="images/linkedin-logo.png" alt="LinkedIn Logo" height="50px" width="50px"/></a>
+		<a href="https://github.com/nicholasblock78"><img src="images/github-logo.png" alt="Github Logo" height="50px" width="50px" /></a>
 	</footer>
 </body>
 </html>
