Start to clean up contact and experience css

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 		</nav>
 	</header>
 
-	<main>
+	<main class="contact">
 		<h2>Contact Information</h2>
 		<div id="phone">
 			<p><strong>Phone Number: </strong></p>
