--- a/experiences.html
+++ b/experiences.html
@@ -22,7 +22,7 @@
 			</ul>
 		</nav>
 	</header>
-	<main>
+	<main class="experiences">
 		<h2>Experiences</h2>
 		<div>
 			<img src="images/dbclogo.png" alt="Dev Bootcamp Logo" height="30px"/>
