Add inspirtaion section on about page and add images

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
 		<h4><em>"Creative health nut turned curious developer eager to inspire and change the world one line of code at a time."</em></h4>
 		<h3>Who am I?</h3>
 		<h3>Why coding?</h3>
+		<h3>Inspiration</h3>
 		
 	</main>
 	<footer>
