--- a/skills.html
+++ b/skills.html
@@ -41,6 +41,12 @@
 			<li>SQL</li>
 			<li>Active Record</li>
 		</ul>
+			<ul>
+			<p>Dabbled In</p>
+			<li>Angular</li>
+			<li>Ionic</li>
+			
+		</ul>
 	</main>
 	<footer>
 		<a href="https://www.linkedin.com/in/nicholasblock78
