Update skills page

--- a/skills.html
+++ b/skills.html
@@ -25,10 +25,12 @@
 	<main>
 		<h2>Skills</h2>
 		<ul>
-			<p>Currently studying</p>
+			<p>Languages and concepts I'm currently exploring</p>
 			<li>React</li>
 			<li>React Native</li>
 			<li>Google Maps API</li>
+			<li>MiddleMan</li>
+			<li>Haml</li>
 		</ul>
 		<ul>
 			<p>Current Skills and Technologies</p>
@@ -40,6 +42,18 @@
 			<li>Agile Workflow</li>
 			<li>SQL</li>
 			<li>Active Record</li>
+			<li>Sinatra</li>
+			<li>Sass</li>
+			<li>Adobe Photoshop</li>
+			<li>Adobe Illustrator</li>
+		</ul>
+		<ul>
+			<p>Interested in</p>
+			<li>node.js</li>
+			<li>Phaser</li>
+			<li>Gulp</li>
+			<li>Babel</li>
+			<li>Less CSS</li>
 		</ul>
 			<ul>
 			<p>Dabbled In</p>
